# hackomania-dadde-ai

./: .env.example  .gitignore  INFO.md  PRD.md  Q&A_SESSION.md  README.md  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
.agents/: ai_expert.md  clickhouse_expert.md  interledger_expert.md  judge_expert.md
Da UI/: README.md
Da UI/src/app/: App.tsx
Da UI/src/imports/: admin-dashboard-spec.md  community-impact-dashboard.tsx  disaster-relief-landing-page.txt
agent/: .env.example  main.py  pyproject.toml
dadde-fund/: package.json
docs/: INFO.md  PRD.md  PROBLEM.md
examples/gemini/: .env.example  README.md  requirements.txt  run-all.sh
examples/gemini/src/: 01_gemini_text.py  02_gemini_vision_local.py  03_adk_google_search.py  04_gemini_langfuse.py  05_adk_search_langfuse.py  adk_search_runner.py  common.py
examples/openpayments/: .env.example  README.md  package.json
examples/openpayments/src/: 00-callback-server.ts  01-wallet-info.ts  02-create-incoming-grant.ts  03-create-incoming-payment.ts  04-create-quote.ts  05-start-outgoing-grant.ts  client.ts  (+13 more)
scripts/: create-admin.js  create-dummy-recipients.js  generate_mock_data.py  migrate-clickhouse.ts  promote-admin.js  simulate_velocity.js  supabase-schema.sql
src/app/: client-app.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  routes.tsx
src/lib/: auth.ts  clickhouse.ts  config.ts  open-payments.ts  supabase-browser.ts  supabase.ts  use-auth-fetch.ts
vendor-UI/: .env.example  .gitignore  README.md  index.html  package.json  vite.config.ts
vendor-UI/server/: index.mjs
(+80 files in other folders)
