[project]
name = "daddes-fund-agent"
version = "0.1.0"
description = "Dadde's Fund AI Agent – Disaster Verification & Claim Recommendation Pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "pydantic",
    "google-adk",
    "google-genai",
    "ag-ui-adk",
    "httpx",
    "langfuse",
]
